# json-api-rs

./: Cargo.toml
rocket/: Cargo.toml
src/: lib.rs  resource.rs
src/doc/: convert.rs  de.rs  error.rs  ident.rs  link.rs  mod.rs  object.rs  relationship.rs  specification.rs
src/query/: builder.rs  mod.rs  sort.rs
src/value/: convert.rs  mod.rs
src/value/collections/: map.rs  set.rs
src/value/fields/: key.rs  mod.rs  path.rs
src/view/: executor.rs  mod.rs  resolver.rs
tests/: query.rs
